Change receive time to current time

--- a/templates/result-table.html
+++ b/templates/result-table.html
@@ -48,8 +48,8 @@
 			<div id="result-hit" class="table-td"><?=$hit?></div>
 		</div>
 		<div class="table-tr">
-			<div class="table-td">Дата и время получения запроса: </div>
-			<div id="result-receive-time" class="table-td"><?=$currentTime?></div>
+			<div class="table-td">Текущее время: </div>
+			<div id="current-time" class="table-td"></div>
 		</div>
 		<div class="table-tr">
 			<div class="table-td">Время работы скрипта: </div>
